--- a/miniprogram/pages/parrot/list/index.wxss
+++ b/miniprogram/pages/parrot/list/index.wxss
@@ -6,10 +6,16 @@
 }
 
 .search-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   display: flex;
   align-items: center;
-  padding: 16rpx 16rpx;
+  padding: 16rpx 20rpx;
   gap: 12rpx;
+  background: #f8fafc;
+  z-index: 100;
 }
 
 .search-input {
@@ -82,16 +88,23 @@
 
 .list-container {
   flex: 1;
-  padding: 0 16rpx;
+  padding: 0 20rpx;
+  padding-top: 88rpx;
+  box-sizing: border-box;
+  width: 100%;
 }
 
 .waterfall {
   display: flex;
-  gap: 12rpx;
+  gap: 16rpx;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .waterfall-col {
   flex: 1;
+  width: calc(50% - 8rpx);
+  min-width: 0;
 }
 
 .load-more {
