--- a/miniprogram/pages/parrot/detail/index.wxss
+++ b/miniprogram/pages/parrot/detail/index.wxss
@@ -13,6 +13,11 @@
   height: 100%;
 }
 
+.photo-swiper video {
+  width: 100%;
+  height: 100%;
+}
+
 .no-photo {
   width: 100%;
   height: 400rpx;
@@ -219,9 +224,10 @@
   display: flex;
   gap: 16rpx;
   padding: 24rpx 32rpx;
-  padding-bottom: calc(env(safe-area-inset-bottom) + 24rpx);
+  padding-bottom: calc(env(safe-area-inset-bottom) + 32rpx);
   background: rgba(255, 255, 255, 0.9);
   backdrop-filter: blur(20rpx);
+  z-index: 100;
 }
 
 .action-bar button {
